--- a/JavaScriptGallery/index.html
+++ b/JavaScriptGallery/index.html
@@ -2,7 +2,7 @@
     <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="gallery.min.js"></script>
+<script src="gallery.js"></script>
 <link rel="stylesheet" type="text/css" href="gallery.min.css" media="screen" />
 
     </head>
@@ -37,16 +37,17 @@
     setGalleryTransition("opacity");
     enableExtraButtons();
     //backgroundColor("#000000f7");
-    //setGalleryStyle("Circles");
+    //setGalleryStyle("mosaic");
+   //enableAutoWidth();
     json = '{ "Entry": { "Title": "Meine Lieblings Bilder", '+
-       '"Image": ["https://dummyimage.com/800x400/000/ff0000",'+
+       '"Image": ["https://dummyimage.com/800x400/ff0000/ff0000",'+
        '"https://dummyimage.com/800x400/000/000",'+
-       '"https://dummyimage.com/800x400/000/00ff00",'+
+       '"https://dummyimage.com/800x400/00ff00/00ff00",'+
        '"https://dummyimage.com/800x400/000/000",'+
-       '"https://dummyimage.com/800x400/000/0000ff",'+
+       '"https://dummyimage.com/800x400/0000ff/0000ff",'+
        '"https://dummyimage.com/800x400/000/000" ] } }';
    addGallery(json);
-   json = '{ "Entry": { "Title": "Was ist los mit dir?",  "Image": ["https://via.placeholder.com/300", "https://via.placeholder.com/1200" ] } }';
+   json = '{ "Entry": { "Title": "Was ist los mit dir?",  "Image": ["https://dummyimage.com/800x400/ff0000/ff0000", "https://via.placeholder.com/1200" ] } }';
    addGallery(json);
 </script>
     </body>
