Mosaic Style Added final

--- a/JavaScriptGallery/index.html
+++ b/JavaScriptGallery/index.html
@@ -3,7 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="gallery.js"></script>
-<link rel="stylesheet" type="text/css" href="gallery.min.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="gallery.css" media="screen" />
 
     </head>
     <style>
@@ -36,9 +36,6 @@
 
     setGalleryTransition("opacity");
     enableExtraButtons();
-    //backgroundColor("#000000f7");
-    //setGalleryStyle("mosaic");
-   //enableAutoWidth();
     json = '{ "Entry": { "Title": "Meine Lieblings Bilder", '+
        '"Image": ["https://dummyimage.com/800x400/ff0000/ff0000",'+
        '"https://dummyimage.com/800x400/000/000",'+
