--- a/JavaScriptGallery/index.html
+++ b/JavaScriptGallery/index.html
@@ -1,85 +1,183 @@
 <html>
-    <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="gallery.js"></script>
-<link rel="stylesheet" type="text/css" href="gallery.css" media="screen" />
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="gallery.js"></script>
+    <link rel="stylesheet" type="text/css" href="gallery.css" media="screen" />
+  </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      font-family: calibri, Arial, sans-serif;
+    }
+    .header {
+      width: 100%;
+      height: 40px;
+      text-align: center;
+      background-color: rgb(224 224 224);
+      color: black;
+    }
+    .main{
+        margin: 20px;
+    }
+    .Gallery{
+        margin: 20px;
+    }
+    .footer {
+      width: 100%;
+      height: 30px;
+      text-align: center;
+      background-color: rgb(224 224 224);
+      color: black;
+    }
+    .footer p {
+      padding: 8px;
+      font-size: 12px;
+    }
+  </style>
+  <body>
+    <div class="header">
+      <h1>Gallery.js</h1>
+    </div>
+    <br /><br /><br /><br />
 
-    </head>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            font-family: calibri,Arial , sans-serif;
-        }
-        .footer{
-            width: 100%;
-            height: 30px;
-            text-align: center;
-            background-color: rgb(224 224 224);
-            color: black;
-        }
-        .footer p{
-            padding: 8px;
-            font-size: 12px;
-        }
-    </style>
-    <body>
-        <h1>Gallery.js</h1>
-        <br><br><br><br>
+    <div class="Main">
+        <h2>Break a image</h2>
+      <p>
+        Break a image between other elements on responsive websites. [triggered
+        on 768px]
+      </p>
+      <br />
 
-        <h3>Break a image between other elements on responsive websites. [triggered on 768px]</h3><br>
+      <div
+        style="
+          background-color: rgb(224 224 224);
+          width: calc(95% - 20px);
+          height: 300px;
+          border-radius: 5px;
+          padding: 10px;
+        "
+        class="demoElement"
+      >
+        <img
+          id="element_2155"
+          src="https://via.placeholder.com/150"
+        />
+        <h1>Headline</h1>
+        <move id="move_2155" mediaquery="768"></move>
+        <p>Some Text</p>
+      </div>
 
-        <img style="margin-left: 3%;" id="element_2155" src="https://via.placeholder.com/150" ><br><br>
-        <div style="background-color: orange; width: calc(95% - 20px); height: 300px; border-radius: 5px; margin: 0 auto; padding: 10px" class="demoElement">
-           <h1>Headline</h1>
-           <move id="move_2155" mediaquery="768" ></move>
-           <p>Some Text</p>
+      <br />
+
+      <h2>Slider</h2>
+      <br />
+      <div style="max-width: 600px; height: 300px">
+        <div class="GallerySlide">
+          <svg
+            onClick="gallerySlideLeft()"
+            class="nav_left"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="white"
+            width="48px"
+            height="48px"
+          >
+            <path d="M0 0h24v24H0V0z" fill="none" />
+            <path
+              d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
+            />
+          </svg>
+          <img
+            class="codeImage galleryJS"
+            width="600px"
+            height="324px"
+            src="https://dummyimage.com/800x400/aa550/fff000"
+            alt="source code"
+          />
+          <img
+            class="codeImage galleryJS addFill"
+            width="600px"
+            height="324px"
+            src="https://dummyimage.com/800x400/ff0000/000"
+            alt="source code"
+          />
+          <img
+            class="codeImage galleryJS"
+            width="600px"
+            height="324px"
+            src="https://dummyimage.com/800x400/00ff00/00ff00"
+            alt="source code"
+          />
+          <img
+            class="codeImage galleryJS"
+            width="600px"
+            height="324px"
+            src="https://dummyimage.com/800x400/0000ff/0000ff"
+            alt="source code"
+          />
+          <svg
+            onClick="gallerySlideRight()"
+            class="nav_right"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="white"
+            width="48px"
+            height="48px"
+          >
+            <path d="M0 0h24v24H0V0z" fill="none" />
+            <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z" />
+          </svg>
         </div>
+        <div class="GallerySlideDots"></div>
+      </div>
+      <br /><br /><br /><br /><br /><br />
+      <h2>Standalone image:</h2>
+      <br />
+      <img
+        class="codeImage galleryJS"
+        width="600px"
+        height="324px"
+        src="https://dummyimage.com/800x400/000/fff000"
+        alt="source code"
+      />
+    </div>
 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="Gallery">
+      
+    </div>
+    <!--
+    <div class="Gallery">
+       <h2>Full gallery:</h2>
+       <p>Meine Lieblings Bilder</p>
+       <img loading="lazy" class="galleryJS" alt="Image0" width="300px" height="169px" src="https://dummyimage.com/800x400/ff0000/ff0000">
+    </div>
+    -->
+    <div class="footer"><p>Marcel Bohland 2021</p></div>
+    <script>
+      /*
+       * For every Day/Project a new "addGallery"
+       */
 
-        <h3>Slider</h3><br>
-        <div style="max-width: 600px; height: 300px;">
-            <div class="GallerySlide">
-                <svg onClick="gallerySlideLeft()" class="nav_left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="48px" height="48px"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"/></svg>
-                <img class="codeImage galleryJS" width="600px" height="324px" src="https://dummyimage.com/800x400/aa550/fff000" alt="source code">
-                <img class="codeImage galleryJS addFill" width="600px" height="324px" src="https://dummyimage.com/800x400/ff0000/000" alt="source code">
-                <img class="codeImage galleryJS" width="600px" height="324px" src="https://dummyimage.com/800x400/00ff00/00ff00" alt="source code">
-                <img class="codeImage galleryJS" width="600px" height="324px" src="https://dummyimage.com/800x400/0000ff/0000ff" alt="source code">
-                <svg onClick="gallerySlideRight()" class="nav_right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="48px" height="48px"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/></svg>
-            </div>
-            <div class="GallerySlideDots">
-
-            </div>
-        </div>
-        <br><br><br><br><br><br>
-        <h3>Standalone image:</h3><br>
-        <img class="codeImage galleryJS" width="600px" height="324px" src="https://dummyimage.com/800x400/000/fff000" alt="source code">
-        
-<div class="Gallery ">
-    <h3>Full gallery:</h3>
-</div>
-<div class="footer"><p>Marcel Bohland 2021</p></div>
-<script>  
-/*
-* For every Day/Project a new "addGallery"
-*/
-
-    setGalleryTransition("opacity");
-    enableExtraButtons();
-    json = '{ "Entry": { "Title": "Meine Lieblings Bilder", '+
-       '"Image": ["https://dummyimage.com/800x400/ff0000/ff0000",'+
-       '"https://dummyimage.com/800x400/000/000",'+
-       '"https://dummyimage.com/800x400/00ff00/00ff00",'+
-       '"https://dummyimage.com/800x400/000/000",'+
-       '"https://dummyimage.com/800x400/0000ff/0000ff",'+
-       '"https://dummyimage.com/800x400/000/000" ] } }';
-   addGallery(json);
-   json = '{ "Entry": { "Title": "Was ist los mit dir?",  "Image": ["https://dummyimage.com/800x400/ff0000/ff0000", "https://via.placeholder.com/1200" ] } }';
-   addGallery(json);
-   initGallerySlide(300, true, true);
-   initMove();
-</script>
-    </body>
+      setGalleryTransition("opacity");
+      enableExtraButtons();
+      json =
+        '{ "Entry": { "Title": "Meine Lieblings Bilder", ' +
+        '"Image": ["https://dummyimage.com/800x400/ff0000/ff0000",' +
+        '"https://dummyimage.com/800x400/000/000",' +
+        '"https://dummyimage.com/800x400/00ff00/00ff00",' +
+        '"https://dummyimage.com/800x400/000/000",' +
+        '"https://dummyimage.com/800x400/0000ff/0000ff",' +
+        '"https://dummyimage.com/800x400/000/000" ] } }';
+     addGallery(json);
+      json =
+        '{ "Entry": { "Title": "Was ist los mit dir?",  "Image": ["https://dummyimage.com/800x400/ff0000/ff0000", "https://via.placeholder.com/1200" ] } }';
+     addGallery(json);
+      initGallerySlide(300, true, true);
+      enableDoubleClick();
+      initMove();
+     // initGallery();
+    </script>
+  </body>
 </html>
