Add keydown listner for ESCAPE

--- a/JavaScriptGallery/index.html
+++ b/JavaScriptGallery/index.html
@@ -177,6 +177,7 @@
       initGallerySlide(300, true, true);
       enableDoubleClick();
       initMove();
+      enableKeydownESC()
      // initGallery();
     </script>
   </body>
