--- a/JavaScriptGallery/html.html
+++ b/JavaScriptGallery/html.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="gallery.js"></script>
@@ -41,11 +46,21 @@
       <h1>Gallery.js</h1>
     </div>
     <br /><br /><br /><br />
-    <video class="galleryJS addToGallery" width="320" height="240" autoplay="" muted="" loop="">
-      <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
+    <video
+      class="galleryJS addToGallery"
+      width="320"
+      height="240"
+      autoplay=""
+      muted=""
+      loop=""
+    >
+      <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4" />
     </video>
     <br /><br /><br /><br />
-    <img class="galleryJS addToGallery" src="https://dummyimage.com/800x400/c8d356/00ff00" />
+    <img
+      class="galleryJS addToGallery"
+      src="https://dummyimage.com/800x400/c8d356/00ff00"
+    />
     <br /><br /><br /><br />
     <div class="Main">
       <div class="Gallery">
@@ -58,10 +73,16 @@
         <img src="https://dummyimage.com/800x400/0000ff/ffff66" />
         <img src="https://dummyimage.com/800x400/00ff00/ff3300" />
         <video width="320" height="240" autoplay="" muted="" loop="">
-          <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
+          <source
+            src="https://www.w3schools.com/html/movie.mp4"
+            type="video/mp4"
+          />
         </video>
         <video width="320" height="240" autoplay="" muted="" loop="">
-          <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+          <source
+            src="https://www.w3schools.com/html/mov_bbb.mp4"
+            type="video/mp4"
+          />
         </video>
       </div>
     </div>
