--- a/demo/video.html
+++ b/demo/video.html
@@ -20,18 +20,23 @@
       width: 100%;
       height: 40px;
       text-align: center;
-      background-color: rgb(224 224 224);
+      background-color: #cde5a9;;
       color: black;
+      position: fixed;
+      z-index: 99999;
+      top: 0;
     }
     .Main {
       padding: 20px;
+      margin-top: 150px;
     }
     .nav{
-      padding: 20px;
+      background-color: #cde5a9;
+      padding: 5px;
     }
     .nav .bubble{
       padding: 10px;
-      background-color: aqua;
+      background-color: #edffd2;
       border-radius: 100vw;
       max-width: 100px;
       text-align: center;
@@ -40,16 +45,16 @@
     }
     .nav .bubble a{
       text-decoration: none;
-      color: #ffffff;
+      color: #ababab;
     }
     .Gallery {
-      margin-top: 0;
+      margin: 20px;
     }
     .footer {
       width: 100%;
       height: 30px;
       text-align: center;
-      background-color: rgb(224 224 224);
+      background-color: #cde5a9;
       color: black;
     }
     .footer p {
@@ -60,18 +65,20 @@
   <body>
     <div class="header">
       <h1>Gallery.js</h1>
+      <div class="nav">
+        <div class="bubble">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="bubble">
+          <a href="video.html">Video</a>
+        </div>
+       </div>
     </div>
-    <div class="nav">
-      <h1>Gallery.js Demo</h1>
-      <p>More Pages:</p>
-      <div class="bubble">
-        <a href="index.html">Home</a>
-      </div>
-     </div>
+
 
     <div class="Main">
-      <br />
-      <hr>  
+      <h1>JavaScriptGallery Video Demo</h1>
+      <br /><br /><br /><br /><br />
       <br />
       <h2>Standalone video</h2>
       <video
@@ -85,7 +92,13 @@
       <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4" />
     </video>
     <br />
-    <hr>  
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <br />
     <h2>Standalone image</h2>
     <img
@@ -93,18 +106,24 @@
       src="https://dummyimage.com/800x400/c8d356/00ff00"
     />
     <br />
-    <hr>  
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <br />
     <h2>Gallery with video</h2>
       <div class="Gallery">
-        <img src="https://dummyimage.com/800x400/00ff00/00ff00" />
-        <img src="https://dummyimage.com/800x400/ffff00/00ff00" />
-        <img src="https://dummyimage.com/800x400/00ffff/00ff00" />
-        <img src="https://dummyimage.com/800x400/0fff00/00ff00" />
-        <img src="https://dummyimage.com/800x400/0000ff/00ff00" />
-        <img src="https://dummyimage.com/800x400/ff0000/00ffff" />
-        <img src="https://dummyimage.com/800x400/0000ff/ffff66" />
-        <img src="https://dummyimage.com/800x400/00ff00/ff3300" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/00ff00/00ff00" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/ffff00/00ff00" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/00ffff/00ff00" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/0fff00/00ff00" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/0000ff/00ff00" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/ff0000/00ffff" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/0000ff/ffff66" />
+        <img loading="lazy" alt="Image" width="300px" height="169px" src="https://dummyimage.com/800x400/00ff00/ff3300" />
         <video width="320" height="240" autoplay="" muted="" loop="">
           <source
             src="https://www.w3schools.com/html/movie.mp4"
@@ -125,10 +144,10 @@
        * For every Day/Project a new "addGallery"
        */
 
-      setGalleryTransition("slideAndZoom");
-      enableExtraButtons();
-      enableDoubleClick();
-      initGallery();
+      JavaScriptGallery.setGalleryTransition("slideAndZoom");
+      JavaScriptGallery.enableExtraButtons();
+      JavaScriptGallery.enableDoubleClick();
+      JavaScriptGallery.initGallery();
     </script>
   </body>
 </html>
